# lineic

./: Cargo.toml  readme.md
.github/workflows/: tests.yml
examples/: custom_types.rs  start_here.rs
src/: bucket.rs  interpolator.rs  lib.rs  number.rs  range.rs
